--- a/findly-builder/src/app/components/app-menu/app-menu.component.html
+++ b/findly-builder/src/app/components/app-menu/app-menu.component.html
@@ -3,11 +3,11 @@
 	<ng-container *ngIf="!settingMainMenu && !sourceMenu || sourceMenu">
 	<div class="upgrade_your_plan_price" [hidden]="!showUpgrade">
 		<div class="upgrade-plan-btn" (click)="upgrade()">Upgrade Your Plan<img src="assets/icons/pricing/carrotright.svg"></div>
-		<div class="document-limit">22%  document limit reached
-			<ngb-progressbar height="10px" type="primary" value="20" max="100"></ngb-progressbar>
+		<div class="document-limit">{{usageDetails.ingestDocs}}%  document limit reached
+			<ngb-progressbar height="10px" type="primary" [value]="usageDetails?.ingestDocs" max="100"></ngb-progressbar>
 		</div>		
-		<div class="document-limit">10%  query limit reached
-			<ngb-progressbar class="query-limited-reached" height="10px" type="primary" value="20" max="100"></ngb-progressbar>
+		<div class="document-limit">{{usageDetails.searchQueries}}%  query limit reached
+			<ngb-progressbar class="query-limited-reached" height="10px" type="primary" [value]="usageDetails?.searchQueries" max="100"></ngb-progressbar>
 		</div>		
 	</div></ng-container>
 	<perfect-scrollbar class="perfect-scroll">
