--- a/findly-builder/src/app/components/structured-data/structured-data.component.scss
+++ b/findly-builder/src/app/components/structured-data/structured-data.component.scss
@@ -276,7 +276,7 @@
                 }
                 &.defaultView{
                     .default-body{
-                        // max-height:120px !important;
+                        max-height:104px !important;
                         overflow: hidden !important;
                     }
                 }
