--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -2095,7 +2095,7 @@ a{
   top: -30px;
 }
 
-.sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container .action-content .action-btns{
+/* .sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container .action-content .action-btns{
   margin: 0 18px;
   background: #E7F1FF;
   border: 1px solid #85B7FE;
@@ -2114,19 +2114,19 @@ a{
   font-weight: 600;
   height: 30px;
   padding: 0 15px;
-}
+} 
 
-.sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container .action-content{
-  display: block;
+ .sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container .action-content{ 
+   display: block;
   background: #FFFFFF;
   box-shadow: 0px 0px 80px rgb(0 0 0 / 7%), 0px 0px 10.0172px rgb(0 0 0 / 4%);
   border-radius: 8px;
   padding: 18px 0 15px 0;
   margin-bottom: 15px
-}
-.sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container{
+ } 
+ .sdk-top-down-interface .top-down-search-background-div .top-down-wrapper .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec .quick-actions-container .action-results-container{
   display: block;
-}
+} */
 
 .sdk-top-down-interface .conversation-container .conversations .search-container.conversation #searchChatContainer .finalResults{
   display:none !important;
@@ -2224,7 +2224,7 @@ display: none !important;
 }
 
 .main-content-title-grid-data{
-  display: flex;
+  display: flex !important;
   flex-wrap: wrap;
   margin: 0 0px;
   width: 100%;
@@ -2232,22 +2232,30 @@ display: none !important;
   .main-content-title-grid-data .title-box-data{
   padding: 5px;
   width: 25%;
+  display: flex !important;
+  padding: 0px !important;
+  box-shadow: none !important;
+  margin: 5px 0px 5px 0px !important;
   }
   .main-content-title-grid-data .title-box-data .title-name{
-  border-radius: 4px;
-  color: #202124;
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 17px;
-  padding: 11px 12px;
-  height: 100%;
-  background: #FFFFFF;
-  border: 1px solid #E7F1FF;
-  box-sizing: border-box;
-  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
+    text-align: left !important;
+  border-radius: 4px !important;
+  color: #202124 !important;
+  font-weight: 600 !important;
+  font-size: 14px !important;
+  line-height: 17px !important;
+  padding: 11px 12px !important;
+  height: 100% !important;
+  background: #FFFFFF !important;
+  border: 1px solid #E7F1FF !important;
+  box-sizing: border-box !important;
+  box-shadow: 0px 0px 11px rgba(0, 0, 0, 0.1) !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+  width: 100% !important;
+  margin: 0px 10px 0px 0px !important;
+  max-width: 100% !important;
   }
 
   .top-down-search-background-div .topdown-search-main-container .all-result-container .full-results-data-container .all-product-details .content-data-sec.filter-added.if-customize-mode {
