--- a/findly-builder/src/app/components/scheduler/scheduler.component.scss
+++ b/findly-builder/src/app/components/scheduler/scheduler.component.scss
@@ -419,6 +419,7 @@
                 .dropdown-input{
                     border: 0;
                     background: #EFF0F1;
+                    color: #9B9B9B;
                 }
             }
         }
