--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -341,8 +341,12 @@
                 font-size: 14px;
                 margin-bottom: 15px;
                 img{
-                    margin-right: 12px;
+                    margin-right: 5px;
                 }
+            }
+            .content-description{
+                width: max-content;
+                margin-left: -45px;
             }
             .status-identification-content{
                 width: 230px;
