--- a/findly-builder/src/app/components/invoices/invoices.component.html
+++ b/findly-builder/src/app/components/invoices/invoices.component.html
@@ -1,21 +1,17 @@
 <div class="invoice-container">
     <div class="header-sec">
         <div class="title">Invoices</div>
-        <div class="d-flex align-items-center">
+        <!-- <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
                 <input type="text" placeholder="Search" class="input-search" [ngClass]="{'pl-33':!searchInvoice,'pl-2':searchInvoice}" autocomplete="off" [(ngModel)]="searchInvoice" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchInvoice">
                 <img class="close-icon" *ngIf="searchInvoice" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchInvoice}" (click)="searchInvoice='';toggleSearch(false)">
-                <!-- <img src="assets/icons/search_gray.svg" class="search-icon">                -->
             </div>           
             <div class="seach-block" *ngIf="(invoices && invoices.length)">
                 <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch(true)"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
             </div> 
-            <!-- <div class="download-icon" tooltipClass="tooltip_custom margin-10" placement="bottom-right" container='body' ngbTooltip="Download Log">
-                <img src="assets/icons/usage-log/download.svg">
-            </div>            -->
-        </div>
+        </div> -->
     </div>
     <div class="plan-type">
         <div class="current-plan">Current Plan</div>
@@ -42,7 +38,7 @@
                 <div class="title col-2">{{invoice.subscriptionType}}</div>
                 <div class="title col-3">{{invoice.invoiceCreatedDate  | dateFormatPipe: 'DD MMM YYYY'}}</div>
                 <div class="actions-invoice">
-                    <div class="view"> <a href="{{invoice.viewInvoice}}" target="_blank"><img src="assets/icons/usage-log/view.svg"></a></div>
+                    <!-- <div class="view"> <a href="{{invoice.viewInvoice}}" target="_blank"><img src="assets/icons/usage-log/view.svg"></a></div> -->
                     <div class="download-invoice"><a type="button" (click)="downloadInvoice(invoice.viewInvoice,invoice._id)"><img src="assets/icons/usage-log/download.svg"></a></div>
                 </div>
             </div>
