--- a/findly-builder/src/app/components/usage-log/usage-log.component.html
+++ b/findly-builder/src/app/components/usage-log/usage-log.component.html
@@ -1,7 +1,7 @@
 <div class="invoice-container">
     <div class="header-sec">
         <div class="title">Usage Log</div>
-        <div class="d-flex align-items-center">
+        <!-- <div class="d-flex align-items-center">
             <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
                 <input type="text" placeholder="Search" class="input-search"  [ngClass]="{'pl-33':!searchUsageLog, 'pl-2':searchUsageLog}" autocomplete="off" [(ngModel)]="searchUsageLog" (focusout)="showSearch= !showSearch" (mouseover)="searchImgSrc = (searchFocusIn ? 'assets/icons/search_gray.svg' :'assets/icons/search_gray_dark.svg')"
                 (mouseout)="searchFocusIn=false;searchImgSrc = 'assets/icons/search_gray.svg'" (focus)="searchFocusIn=true;searchImgSrc = 'assets/icons/search_gray.svg'">
@@ -11,10 +11,7 @@
             <div class="seach-block">
                 <span [ngClass]="{'d-none': showSearch}" class="mr-3" id="btn_toggle_search_structured_data" (click)="toggleSearch()"><img src="assets/icons/search.svg" [ngClass]="{'d-none': showSearch}">{{'search' | translate}}</span>
             </div> 
-            <!-- <div class="download-icon" tooltipClass="tooltip_custom margin-10" placement="bottom-right" container='body' ngbTooltip="Download Log">
-                <img src="assets/icons/usage-log/download.svg">
-            </div>            -->
-        </div>
+        </div> -->
     </div>
     <div class="plan-type">
         <div class="current-plan">Current Plan</div>
@@ -118,18 +115,7 @@
                     <div class="col-2 title pl-3">{{usageLog.createdOn  | dateFormatPipe: 'DD MMM YYYY h:mm a'}}</div>                             
                 </div>    
             </ng-container>
-            <!-- <div class="table_body row">
-                <div class="col-4 title search-query-data">
-                    <div class="img-block">
-                        <img src="assets/icons/usage-logs/info-img.svg">
-                    </div>
-                    <div class="content-sec">Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</div>
-                </div>
-                <div class="col-2 title pl-3">Query Suggestion</div>
-                <div class="col-2 title pl-3">SDK</div>
-                <div class="col-2 title pl-3">Yes</div>
-                <div class="col-2 title pl-3">3 Jun 2020 12:00 p.m.</div>                             
-            </div> -->
+            
             <app-record-pagination *ngIf="usageLogs && usageLogs.length" [totalRecord]='totalRecord' [limitpage]='10' (pageChanged)="paginate($event)"></app-record-pagination>
         </div>
     </perfect-scrollbar>
