index pipline for  simulate defalult all added code changes

--- a/findly-builder/src/app/components/index/index.component.html
+++ b/findly-builder/src/app/components/index/index.component.html
@@ -764,14 +764,15 @@
         <div class="dropdown dropdown-open">
           <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">
             {{
-            (simulteObj.sourceType
-            ? (simulteObj.sourceType == 'faq'? 'FAQs': (simulteObj.sourceType =='object'?'Structure Data':simulteObj.sourceType))
-            : "choose_an_option"
-            ) | translate
-            }}
+              (simulteObj.sourceType
+              ? (simulteObj.sourceType == 'faq'? 'FAQs': (simulteObj.sourceType =='object'?'Structure Data':(simulteObj.sourceType =='all'?'All':simulteObj.sourceType)))
+              : "choose_an_option"
+              ) | translate
+              }}
           </button>
           <ul class="dropdown-menu content-menu">
             <!-- <li (click)="changeSimulate('page', 'source')"><a>Page</a></li> -->
+            <li (click)="changeSimulate('all', 'source')"><a>All</a></li>
             <li (click)="changeSimulate('faq', 'source')"><a>FAQs</a></li>
             <li (click)="changeSimulate('content', 'source')">
               <a>Content</a>
